src/objects/SomDig_Werbetraegergruppierung__c.object
<CustomObject>
    <description>Werbeträger Gruppierung sind vormals als Marke bekannt und fassen mehrere Werbeträger zusammen, Grundlage für die Zuordnung von IA Nummern und Werbeträgern.
Dient der Sicherstellung von Konsistenz innerhalb des Buchungstools.</description>
    <fields>
        <fullName>Mig_Info__c</fullName>
        <description>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden</description>
        <inlineHelpText>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden</inlineHelpText>
        <label>Migration Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_Beschreibung__c</fullName>
        <description>Allgemeine Beschreibung für die Historie und Änderungen bitte Aktivitäten/Notizen benutzen.</description>
        <inlineHelpText>Allgemeine Beschreibung für die Historie und Änderungen bitte Aktivitäten/Notizen benutzen.</inlineHelpText>
        <label>Beschreibung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_DEWerbetraegertyp__c</fullName>
        <description>Kennzeichnung als Grundlage für einige Berichte - Zuordnung einer Seite zu einer Gruppe von Werbeträgern.
siehe KV 02630</description>
        <inlineHelpText>Kennzeichnung als Grundlage für einige Berichte - Zuordnung einer Seite zu einer Gruppe von Werbeträgern.</inlineHelpText>
        <label>Werbeträgertyp</label>
        <picklist>
            <picklistValues>
                <fullName>Mandant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Werbeträgergruppierung</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_DEWerbetraegertyp__c</columns>
        <columns>SomDig_Beschreibung__c</columns>
        <columns>Mig_ProdiaKey__c</columns>
        <columns>Mig_Info__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Werbeträgergruppierung-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Werbeträgergruppierungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>